# liftproof

./: .env.example  .gitignore  Makefile
backend/: Dockerfile  pyproject.toml  requirements.txt  start.py
backend/app/: config.py  dependencies.py  main.py
backend/app/engine/: __init__.py  augmented_scm.py  base.py  did.py  ensemble.py  inference.py  scm.py  utils.py
backend/app/models/: schemas.py
backend/app/routers/: analysis.py  copilot.py  export.py  health.py  recommend.py
backend/app/services/: analysis_service.py  copilot_service.py  data_service.py  export_service.py  recommend_service.py
backend/tests/: conftest.py  test_ensemble.py  test_scm.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(protected)/: layout.tsx
frontend/components/copilot/: copilot-provider.tsx  copilot-sidebar.tsx
frontend/components/csv/: column-mapper.tsx  upload-dropzone.tsx  validation-preview.tsx
frontend/components/dashboard/: upload-card.tsx
frontend/components/ui/: button.tsx  (+3 more)
frontend/lib/: api.ts  csv-detection.ts  design-quality.ts
frontend/public/: geo_test_sample.csv  sample_dma_clean.csv  sample_dma_ecommerce.csv  sample_dma_high_power.csv  sample_dma_null.csv  sample_dma_retail.csv  sample_high_noise.csv  sample_moderate_noise.csv
frontend/types/: database.ts
sample-data/: sample_dma_clean.csv  sample_dma_ecommerce.csv  sample_dma_high_power.csv  sample_dma_null.csv  sample_dma_retail.csv  sample_moderate_noise.csv  sample_null_effect.csv
supabase/migrations/: 001_initial_schema.sql
(+19 files in other folders)
